[package]
name = "mew"
version = "0.1.0"
edition = "2024"

[dependencies]
pump_fun_types = { path = "./pump_fun_types" }
pump_swap_types = { path = "./pump_swap_types" }
solana-client = "2.3.7"
solana-program = "2.3.0"
solana-account = "2.2.1"
solana-commitment-config = "2.2.1"
solana-rpc-client-types = "2.3.7"
solana-pubsub-client = "2.3.7"
solana-message = "2.2.3"
solana-transaction = "2.2.3"
solana-signature = "2.2.3"
solana-keypair = "2.2.3"
solana-signer = "2.2.1"
spl-associated-token-account = "7.0.0"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
solana-tpu-client = "2.3"
solana-quic-client = "2.3.7"
solana-connection-cache = "2.3.7"
solana-transaction-error = "2.2.1"
solana-streamer = "2.2.1"
jito-sdk-rust = "0.3.2"
solana-system-interface = "2.0.0"
solana-instruction = "2.3.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.0"
solana-transaction-status = "2.3.1"
solana-account-decoder-client-types = "2.3.7"

bincode = "1.3"
dotenv = "0.15.0"
rand = "0.9.2"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
anyhow = "1"
mpl-token-metadata = { version = "5.1.0", default-features = false }
borsh = "0.10"
bs58 = "0.4"
base64 = "0.21"
tonic = "0.14.1"
futures = "0.3.31"
urlencoding = "2.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres"] }
dashmap = "6.1.0"
regex = "1.11.2"
once_cell = "1.21.3"
ringbuffer = "0.16.0"
chrono = "0.4.41"




